--- a/index.html
+++ b/index.html
@@ -49,10 +49,15 @@
         color: white;
         border: none;
         cursor: pointer;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Add subtle shadow */
+        border-radius: 6px; /* Add rounded corners to all buttons */
+        transition: all 0.2s ease;
       }
 
       button:hover {
         background-color: var(--button-hover);
+        box-shadow: 0 3px 6px rgba(0, 0, 0, 0.15); /* Slightly stronger shadow on hover */
+        transform: translateY(-1px); /* Subtle lift effect */
       }
 
       .container {
@@ -268,10 +273,14 @@
 
       .download-btn {
         background-color: #6c757d;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        border-radius: 6px;
       }
 
       .download-btn:hover {
         background-color: #5a6268;
+        box-shadow: 0 3px 6px rgba(0, 0, 0, 0.15); /* Slightly stronger shadow on hover */
+        transform: translateY(-1px); /* Subtle lift effect */
       }
 
       /* Responsive adjustments */
@@ -322,12 +331,94 @@
           max-width: none;
         }
       }
+
+      .theme-controls {
+        position: fixed;
+        top: 20px;
+        right: 20px;
+        display: flex;
+        align-items: center;
+      }
+
+      .theme-controls .theme-icon {
+        margin: 0 4px; /* Add small margin to icons */
+      }
+
+      .theme-controls > :first-child {
+        margin-right: 36px; /* Keep space after reset button */
+      }
+
+      /* Update responsive styles */
+      @media (max-width: 600px) {
+        .theme-controls > :first-child {
+          margin-right: 24px; /* Slightly reduced space on mobile */
+        }
+      }
+
+      /* Remove copy-btn related styles */
+      .copy-btn {
+        display: none;
+      }
+
+      .top-reset-btn {
+        padding: 8px 16px;
+        background-color: #ff0000; /* Changed from #dc3545 to pure red */
+        color: white;
+        border: none;
+        cursor: pointer;
+        border-radius: 34px;
+        height: 34px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 0.9em;
+        transition: background-color 0.3s ease;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15); /* Slightly stronger shadow for better contrast with red */
+      }
+
+      .top-reset-btn:hover {
+        background-color: #cc0000; /* Darker red on hover */
+      }
+
+      /* Add dark mode shadow adjustments */
+      [data-theme="dark"] button {
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25); /* Darker shadow for dark mode */
+      }
+
+      [data-theme="dark"] button:hover {
+        box-shadow: 0 3px 6px rgba(0, 0, 0, 0.3);
+      }
     </style>
+    <script>
+      // Add browser compatibility check
+      window.addEventListener("load", function () {
+        if (!window.QRCode) {
+          showToast("QR Code library failed to load", "error");
+          document.querySelector("button").disabled = true;
+        }
+
+        // Check for required APIs
+        const missingFeatures = [];
+        if (!navigator.clipboard) missingFeatures.push("Clipboard API");
+        if (!window.Blob) missingFeatures.push("Blob API");
+        if (!window.localStorage) missingFeatures.push("Local Storage");
+
+        if (missingFeatures.length > 0) {
+          showToast(
+            `Browser missing required features: ${missingFeatures.join(", ")}`,
+            "error"
+          );
+        }
+      });
+    </script>
   </head>
   <body>
     <div class="toast-container" id="toastContainer"></div>
 
-    <div class="theme-switch">
+    <div class="theme-controls">
+      <button class="top-reset-btn" onclick="resetAll()">
+        Reset All Options
+      </button>
       <svg class="theme-icon" viewBox="0 0 24 24">
         <path
           d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zM2 13h2c.55 0 1-.45 1-1s-.45-1-1-1H2c-.55 0-1 .45-1 1s.45 1 1 1zm18 0h2c.55 0 1-.45 1-1s-.45-1-1-1h-2c-.55 0-1 .45-1 1s.45 1 1 1zM11 2v2c0 .55.45 1 1 1s1-.45 1-1V2c0-.55-.45-1-1-1s-1 .45-1 1zm0 18v2c0 .55.45 1 1 1s1-.45 1-1v-2c0-.55-.45-1-1-1s-1 .45-1 1zM5.99 4.58c-.39-.39-1.03-.39-1.41 0-.39.39-.39 1.03 0 1.41l1.06 1.06c.39.39 1.03.39 1.41 0s.39-1.03 0-1.41L5.99 4.58zm12.37 12.37c-.39-.39-1.03-.39-1.41 0-.39.39-.39 1.03 0 1.41l1.06 1.06c.39.39 1.03.39 1.41 0 .39-.39.39-1.03 0-1.41l-1.06-1.06zm1.06-10.96c.39-.39.39-1.03 0-1.41-.39-.39-1.03-.39-1.41 0l-1.06 1.06c-.39.39-.39 1.03 0 1.41s1.03.39 1.41 0l1.06-1.06zM7.05 18.36c.39-.39.39-1.03 0-1.41-.39-.39-1.03-.39-1.41 0l-1.06 1.06c-.39.39-.39 1.03 0 1.41s1.03.39 1.41 0l1.06-1.06z"
@@ -347,7 +438,13 @@
     <div class="container">
       <h1>QR Code Generator</h1>
       <div class="input-group">
-        <input type="url" id="url" placeholder="Enter URL here" required onkeypress="handleEnterKey(event)"/>
+        <input
+          type="url"
+          id="url"
+          placeholder="Enter URL here"
+          required
+          onkeypress="handleEnterKey(event)"
+        />
         <button onclick="generateQR()">Generate QR Code</button>
       </div>
       <div class="qr-container">
@@ -358,7 +455,8 @@
           target="_blank"
           rel="noopener noreferrer"
         ></a>
-        <div class="download-controls hidden" id="downloadControls">  <!-- Add hidden class here -->
+        <div class="download-controls hidden" id="downloadControls">
+          <!-- Add hidden class here -->
           <select class="format-select" id="formatSelect">
             <option value="jpg">JPG</option>
             <option value="png">PNG</option>
@@ -367,24 +465,24 @@
           </select>
           <button class="download-btn" onclick="downloadQR()">Download</button>
         </div>
-        <div class="button-group">
-          <div class="action-buttons">
-            <button
-              class="copy-btn hidden"
-              id="copyBtn"
-              onclick="copyQRToClipboard()"
-            >
-              Copy to Clipboard
-            </button>
-            <button class="reset-btn hidden" id="resetBtn" onclick="resetAll()">
-              Reset
-            </button>
-          </div>
-        </div>
       </div>
     </div>
 
     <script>
+      /**
+       * Validates a URL string
+       * @param {string} url - The URL to validate
+       * @returns {boolean} True if URL is valid
+       */
+      function isValidUrl(url) {
+        try {
+          new URL(url.startsWith("http") ? url : `https://${url}`);
+          return true;
+        } catch (e) {
+          return false;
+        }
+      }
+
       /**
        * Generates a QR code from a URL input value
        * @description This function creates a QR code from the URL entered by the user.
@@ -396,47 +494,61 @@
        * @throws {Error} If QRCode library fails to generate code
        */
       function generateQR() {
-        // Get the URL from input field
-        const url = document.getElementById("url").value;
+        const url = document.getElementById("url").value.trim();
 
-        // Validate URL input
+        // Enhanced input validation
         if (!url) {
           showToast("Please enter a URL", "error");
           return;
         }
 
-        // Clear previous QR code and hide action buttons
-        document.getElementById("qrcode").innerHTML = "";
-        document.getElementById("copyBtn").classList.add("hidden");
-        document.getElementById("resetBtn").classList.add("hidden");
-        document.getElementById("downloadControls").classList.add("hidden");
+        if (!isValidUrl(url)) {
+          showToast("Please enter a valid URL", "error");
+          return;
+        }
 
-        // Update URL display with link
-        const urlDisplay = document.getElementById("urlDisplay");
-        urlDisplay.textContent = url;
-        urlDisplay.href = url.startsWith("http") ? url : `https://${url}`;
+        if (url.length > 2048) {
+          showToast("URL is too long (max 2048 characters)", "error");
+          return;
+        }
 
-        // Configure and generate new QR code
-        new QRCode(document.getElementById("qrcode"), {
-          text: url, // The URL to encode
-          width: 256, // QR code width in pixels
-          height: 256, // QR code height in pixels
-          colorDark: "#000000", // Color of QR code blocks
-          colorLight: "#ffffff", // Background color
-          correctLevel: QRCode.CorrectLevel.H, // Highest error correction level
-        });
+        try {
+          // Clear previous state
+          document.getElementById("qrcode").innerHTML = "";
+          document.getElementById("downloadControls").classList.add("hidden");
 
-        // Show success toast
-        showToast("QR Code successfully generated", "success");
+          // Update URL display with link
+          const urlDisplay = document.getElementById("urlDisplay");
+          const fullUrl = url.startsWith("http") ? url : `https://${url}`;
+          urlDisplay.textContent = url;
+          urlDisplay.href = fullUrl;
 
-        // Show action buttons after brief delay to ensure QR code is rendered
-        setTimeout(() => {
-          document.getElementById("copyBtn").classList.remove("hidden");
-          document.getElementById("resetBtn").classList.remove("hidden");
+          // Generate QR code with error handling
+          new QRCode(document.getElementById("qrcode"), {
+            text: fullUrl,
+            width: 256,
+            height: 256,
+            colorDark: "#000000",
+            colorLight: "#ffffff",
+            correctLevel: QRCode.CorrectLevel.H,
+          });
+
+          // Verify QR code was generated
+          if (!document.querySelector("#qrcode canvas")) {
+            throw new Error("QR Code generation failed");
+          }
+
+          // Automatically copy to clipboard
+          copyQRToClipboard();
+
+          // Show download controls
           document
             .getElementById("downloadControls")
             .classList.remove("hidden");
-        }, 100);
+        } catch (error) {
+          console.error("QR Generation error:", error);
+          showToast("Failed to generate QR code", "error");
+        }
       }
 
       /**
@@ -463,10 +575,10 @@
             }),
           ]);
 
-          showToast("QR Code copied to clipboard!", "success");
+          showToast("QR Code copied to clipboard", "success");
         } catch (err) {
           console.error("Clipboard error:", err);
-          showToast("Failed to copy QR code", "error");
+          showToast("Failed to copy QR code to clipboard", "error");
         }
       }
 
@@ -483,9 +595,7 @@
         document.getElementById("qrcode").innerHTML = "";
         document.getElementById("urlDisplay").textContent = "";
 
-        // Hide action buttons
-        document.getElementById("copyBtn").classList.add("hidden");
-        document.getElementById("resetBtn").classList.add("hidden");
+        // Hide action buttons (only copy and download controls remain)
         document.getElementById("downloadControls").classList.add("hidden");
 
         // Notify user of reset
@@ -559,41 +669,58 @@
        * @returns {Promise<void>}
        */
       async function downloadQR() {
-        const format = document.getElementById("formatSelect").value;
-        const url = document.getElementById("url").value;
-
-        // Create filename by removing protocol and special characters
-        const cleanUrl = url
-          .replace(/^(https?:\/\/)/, "") // Remove protocol
-          .replace(/\/$/, "") // Remove trailing slash
-          .replace(/[^\w.-]/g, "-") // Replace special chars with hyphen
-          .replace(/--+/g, "-") // Replace multiple hyphens with single
-          .substring(0, 50); // Limit length for filename
-
-        const filename = `qr-code-${cleanUrl}.${format}`;
-
-        const canvas = document.querySelector("#qrcode canvas");
-
         try {
-          if (format === "svg") {
-            // Generate SVG from QR code data
-            const svgData = await generateSVG();
-            const blob = new Blob([svgData], { type: "image/svg+xml" });
-            saveAs(blob, filename);
-          } else {
-            // Handle other formats using canvas conversion
-            const mimeType = `image/${format}`;
-            const quality = format === "jpg" ? 0.9 : undefined;
-
-            const blob = await new Promise((resolve) =>
-              canvas.toBlob(resolve, mimeType, quality)
-            );
-            saveAs(blob, filename);
+          const canvas = document.querySelector("#qrcode canvas");
+          if (!canvas) {
+            throw new Error("No QR code found");
           }
-          showToast(`QR Code downloaded as ${format.toUpperCase()}`, "success");
+
+          const format = document.getElementById("formatSelect").value;
+          const url = document.getElementById("url").value;
+
+          // Validate format
+          const validFormats = ["jpg", "png", "webp", "svg"];
+          if (!validFormats.includes(format)) {
+            throw new Error("Invalid format selected");
+          }
+
+          // Create filename by removing protocol and special characters
+          const cleanUrl = url
+            .replace(/^(https?:\/\/)/, "") // Remove protocol
+            .replace(/\/$/, "") // Remove trailing slash
+            .replace(/[^\w.-]/g, "-") // Replace special chars with hyphen
+            .replace(/--+/g, "-") // Replace multiple hyphens with single
+            .substring(0, 50); // Limit length for filename
+
+          const filename = `qr-code-${cleanUrl}.${format}`;
+
+          try {
+            if (format === "svg") {
+              // Generate SVG from QR code data
+              const svgData = await generateSVG();
+              const blob = new Blob([svgData], { type: "image/svg+xml" });
+              saveAs(blob, filename);
+            } else {
+              // Handle other formats using canvas conversion
+              const mimeType = `image/${format}`;
+              const quality = format === "jpg" ? 0.9 : undefined;
+
+              const blob = await new Promise((resolve) =>
+                canvas.toBlob(resolve, mimeType, quality)
+              );
+              saveAs(blob, filename);
+            }
+            showToast(
+              `QR Code downloaded as ${format.toUpperCase()}`,
+              "success"
+            );
+          } catch (err) {
+            console.error("Download error:", err);
+            showToast("Failed to download QR code", "error");
+          }
         } catch (err) {
           console.error("Download error:", err);
-          showToast("Failed to download QR code", "error");
+          showToast(`Failed to download QR code: ${err.message}`, "error");
         }
       }
 
@@ -631,9 +758,14 @@
        * @param {KeyboardEvent} event - The keyboard event
        */
       function handleEnterKey(event) {
-        if (event.key === 'Enter') {
-            event.preventDefault();
-            generateQR();
+        if (
+          event.key === "Enter" &&
+          !event.shiftKey &&
+          !event.ctrlKey &&
+          !event.altKey
+        ) {
+          event.preventDefault();
+          generateQR();
         }
       }
 
@@ -647,6 +779,18 @@
         document.documentElement.setAttribute("data-theme", currentTheme);
         themeSwitch.checked = currentTheme === "dark";
       }
+
+      // Add error handler for unhandled promise rejections
+      window.addEventListener("unhandledrejection", function (event) {
+        console.error("Unhandled promise rejection:", event.reason);
+        showToast("An unexpected error occurred", "error");
+      });
+
+      // Add error handler for unexpected errors
+      window.addEventListener("error", function (event) {
+        console.error("Global error:", event.error);
+        showToast("An unexpected error occurred", "error");
+      });
     </script>
   </body>
 </html>
