--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
     <style>
       :root {
-        --bg-color: #ffffff;
+        --bg-color: #f5f5f5; /* Light gray background for light mode */
         --text-color: #000000;
         --input-bg: #ffffff;
         --button-hover: #0056b3;
@@ -256,7 +256,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        gap: 10px;
+        gap: 8px; /* Reduced gap to accommodate new button */
         width: 100%;
         max-width: 256px;
         margin: 0 auto;
@@ -272,15 +272,42 @@
       }
 
       .download-btn {
-        background-color: #6c757d;
+        background-color: #6c7d73;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         border-radius: 6px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 4px;
       }
 
       .download-btn:hover {
         background-color: #5a6268;
         box-shadow: 0 3px 6px rgba(0, 0, 0, 0.15); /* Slightly stronger shadow on hover */
         transform: translateY(-1px); /* Subtle lift effect */
+      }
+
+      .action-icon {
+        width: 16px;
+        height: 16px;
+        margin-right: 6px;
+        vertical-align: middle;
+      }
+
+      .copy-img-btn {
+        background-color: #6c757d;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        border-radius: 6px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 4px;
+      }
+
+      .copy-img-btn:hover {
+        background-color: #5a6268;
+        box-shadow: 0 3px 6px rgba(0, 0, 0, 0.15);
+        transform: translateY(-1px);
       }
 
       /* Responsive adjustments */
@@ -388,6 +415,32 @@
       [data-theme="dark"] button:hover {
         box-shadow: 0 3px 6px rgba(0, 0, 0, 0.3);
       }
+
+      /* Add GitHub link styles */
+      .github-link {
+        position: fixed;
+        bottom: 20px;
+        left: 50%;
+        transform: translateX(-50%);
+        color: var(--text-color);
+        text-decoration: none;
+        font-size: 14px;
+        opacity: 0.7;
+        transition: opacity 0.2s ease;
+        display: flex;
+        align-items: center;
+        gap: 8px;
+      }
+
+      .github-link:hover {
+        opacity: 1;
+      }
+
+      .github-icon {
+        width: 20px;
+        height: 20px;
+        fill: var(--text-color);
+      }
     </style>
     <script>
       // Add browser compatibility check
@@ -416,9 +469,7 @@
     <div class="toast-container" id="toastContainer"></div>
 
     <div class="theme-controls">
-      <button class="top-reset-btn" onclick="resetAll()">
-        Reset All Options
-      </button>
+      <button class="top-reset-btn" onclick="resetAll()">Reset</button>
       <svg class="theme-icon" viewBox="0 0 24 24">
         <path
           d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zM2 13h2c.55 0 1-.45 1-1s-.45-1-1-1H2c-.55 0-1 .45-1 1s.45 1 1 1zm18 0h2c.55 0 1-.45 1-1s-.45-1-1-1h-2c-.55 0-1 .45-1 1s.45 1 1 1zM11 2v2c0 .55.45 1 1 1s1-.45 1-1V2c0-.55-.45-1-1-1s-1 .45-1 1zm0 18v2c0 .55.45 1 1 1s1-.45 1-1v-2c0-.55-.45-1-1-1s-1 .45-1 1zM5.99 4.58c-.39-.39-1.03-.39-1.41 0-.39.39-.39 1.03 0 1.41l1.06 1.06c.39.39 1.03.39 1.41 0s.39-1.03 0-1.41L5.99 4.58zm12.37 12.37c-.39-.39-1.03-.39-1.41 0-.39.39-.39 1.03 0 1.41l1.06 1.06c.39.39 1.03.39 1.41 0 .39-.39.39-1.03 0-1.41l-1.06-1.06zm1.06-10.96c.39-.39.39-1.03 0-1.41-.39-.39-1.03-.39-1.41 0l-1.06 1.06c-.39.39-.39 1.03 0 1.41s1.03.39 1.41 0l1.06-1.06zM7.05 18.36c.39-.39.39-1.03 0-1.41-.39-.39-1.03-.39-1.41 0l-1.06 1.06c-.39.39-.39 1.03 0 1.41s1.03.39 1.41 0l1.06-1.06z"
@@ -456,17 +507,50 @@
           rel="noopener noreferrer"
         ></a>
         <div class="download-controls hidden" id="downloadControls">
-          <!-- Add hidden class here -->
           <select class="format-select" id="formatSelect">
             <option value="jpg">JPG</option>
             <option value="png">PNG</option>
             <option value="webp">WEBP</option>
             <option value="svg">SVG</option>
           </select>
-          <button class="download-btn" onclick="downloadQR()">Download</button>
+          <button class="download-btn" onclick="downloadQR()">
+            <svg
+              class="action-icon"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+            >
+              <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4" />
+              <polyline points="7 10 12 15 17 10" />
+              <line x1="12" y1="15" x2="12" y2="3" />
+            </svg>
+            Download
+          </button>
+          <button class="copy-img-btn" onclick="copyQRToClipboard()">
+            <svg
+              class="action-icon"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+            >
+              <path
+                d="M8 5H6a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2v-1M8 5a2 2 0 002 2h2a2 2 0 002-2M8 5a2 2 0 012-2h2a2 2 0 012 2m0 0h2a2 2 0 012 2v3m2 4H10m0 0l3-3m-3 3l3 3"
+              />
+            </svg>
+            Copy
+          </button>
         </div>
       </div>
     </div>
+
+    <a href="https://github.com/ICJIA/icjia-qr-code" target="_blank" rel="noopener noreferrer" class="github-link">
+      <svg class="github-icon" viewBox="0 0 24 24">
+        <path d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"/>
+      </svg>
+      View on GitHub
+    </a>
 
     <script>
       /**
