fix: better error checking / warning about testing QR code.

--- a/index.html
+++ b/index.html
@@ -91,6 +91,24 @@
         </div>
       </div>
 
+      <!-- Test Warning Section -->
+      <div
+        class="test-warning hidden"
+        role="alert"
+        aria-label="Important testing warning"
+      >
+        <div class="warning-content">
+          <span class="warning-icon">⚠️</span>
+          <div class="warning-text">
+            <h3>IMPORTANT: Test Your QR Code</h3>
+            <p>
+              Please test this QR code with a mobile device before using it in production.
+              Scan it with your phone's camera or QR code app to verify it points to the correct URL.
+            </p>
+          </div>
+        </div>
+      </div>
+
       <!-- Best Practices Section -->
       <div
         class="best-practices hidden"
